--- a/wrr/styles/site-plan-rafting.css
+++ b/wrr/styles/site-plan-rafting.css
@@ -6,9 +6,9 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
+  --primary-color: #4AA9E8 ;
+  --secondary-color: #4DAA57 ;
+  --accent1-color: #2E2F2F;
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
