--- a/wrr/styles/site-plan-rafting.css
+++ b/wrr/styles/site-plan-rafting.css
@@ -2,29 +2,28 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a & */
-@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon&family=Lato:ital,wght@0,400;0,700;1,400&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Cormorant+Garamond:wght@300&display=swap');
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: #4AA9E8 ;
-  --secondary-color: #4DAA57 ;
-  --accent1-color: #2E2F2F;
+  --secondary-color: #2E2F2F ;
+  --accent1-color: #CAE7B9;
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: "Alfa Slab One";
+  --paragraph-font: "Cormorant Garamond", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
+  --headline-color-on-white: #4AA9E8;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
+  --paragraph-color-on-white: #2E2F2F; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #CAE7B9; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #2E2F2F  ;
+  --nav-link-color: #CAE7B9;
+  --nav-background-color: #2E2F2F;
   --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --nav-hover-background-color: #4AA9E8;
 }
 
 
