--- a/wrr/styles/site-plan-rafting.css
+++ b/wrr/styles/site-plan-rafting.css
@@ -6,7 +6,7 @@ Fonts are separated by a & */
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: #4AA9E8 ;
-  --secondary-color: #2E2F2F ;
+  --secondary-color: #2E2f2f ;
   --accent1-color: #CAE7B9;
   --accent2-color: white;
 
