--- a/practice/practicestyles/cssw4practice.css
+++ b/practice/practicestyles/cssw4practice.css
@@ -6,6 +6,11 @@ nav, footer {
 nav,footer{
     text-align: center;
 }
+a{
+    font-size: 1.5em;
+    color: white;
+    padding: 25px;
+}
 img{
     width: 80%;
     display: block;
@@ -13,15 +18,19 @@ img{
 }
 h1{
     text-align: center;
+    margin: 50px, 0;
+}
+body{
+    margin: 0;
 }
 p{
     width: 80%;
-}
-a{
-    font-size: 1.5em;
 }
 main p {
     width: 80%;
     margin: 50px auto;
     text-align: center;
+}
+footer p{
+    padding: 25px;
 }
