--- a/wrr/styles/style.css
+++ b/wrr/styles/style.css
@@ -1,13 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Cormorant+Garamond:wght@300&display=swap');
 .icon{
     width: 80px;
+    padding-top: 10px;
+}
+#logo_link{
+    padding-top: 5px;
 }
 .home-title{
     color:#4AA9E8;
+    font-size: 2em;
+    margin-top: 10px;
 }
 nav a{
     text-align: center;
     color: #CAE7B9 ;
     text-decoration: none;
+    padding: 35px;
 }
 nav a:hover{
     background-color: #4AA9E8;
@@ -16,33 +24,45 @@ nav a:hover{
 h4{
     color:#2E2f2f;
 }
-#hero-msg h1, #hero-msg h4{
-    text-align: center;
-}
-.msg h2{
-    color:#CAE7B9;
-}
-.msg p{
-    color:#CAE7B9;
+h2{
+    margin: 0;
 }
 .button-box{
     text-align: center;
 }
 header{
     background-color:#2E2f2f;
+    font-family: "Alfa Slab One", Helvetica, sans-serif;
 }
 main section{
     text-align: center;
+}
+main section img{
+    box-sizing: border-box;
 }
 body{
     max-width: 1600px;
     margin: 0 auto;
     background-color: white ;
+    font-family: "Cormorant Garamond", Helvetica, sans-serif;
+    font-size: 22px;
+    padding: 0;
+    margin: 0;
+}
+.card-img{
+    border: 10px solid #4AA9E8;
+}
+.rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;
 }
 .book, .join{
     background-color: #2E2f2f;
     color:#CAE7B9;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover{
     background-color: #4AA9E8;
@@ -54,10 +74,26 @@ body{
 }
 .msg{
     background-color: #2E2f2f;
+    line-height: 1.5em;
+    padding: 35px;
+}
+#hero-msg h1, #hero-msg h4{
+    text-align: center;
+}
+.msg h2{
+    color:#CAE7B9;
+    font-family: "Alfa Slab One", Helvetica, sans-serif;
+}
+.msg p{
+    color:#CAE7B9;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 footer{
     background-color: #2E2f2f;
     color: #CAE7B9;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 footer a{
     color: #CAE7B9;
@@ -71,4 +107,7 @@ footer p{
 }
 footer p a:hover{
     text-decoration: underline;
+}
+footer .social img{
+    padding-top: 15px;
 }
