--- a/wrr/styles/style.css
+++ b/wrr/styles/style.css
@@ -39,11 +39,21 @@ h2{
 .button-box{
     text-align: center;
 }
+#content{
+    max-width: 1600px;
+    margin: 0 auto;
+}
 header{
     display: grid;
     grid-template-columns: 150px auto;
     background-color:#2E2f2f;
     font-family: "Alfa Slab One", Helvetica, sans-serif;
+}
+.divider{
+    width: 1600px;
+    height: 100px;
+    background-color: #2E2f2f;
+    margin-top: 50px;
 }
 main{
     display: grid;
@@ -96,6 +106,10 @@ body{
     grid-row: 5/8;
     box-shadow: 5px 5px 10px #6f7364;
 }
+.mountainlake{
+    grid-column: 6/10 ;
+    grid-row: 6/7 ;
+}
 .book, .join{
     background-color: #2E2f2f;
     color:#CAE7B9;
@@ -115,21 +129,13 @@ body{
     grid-column: 1/11;
     grid-row: 4/9;
 }
-.msg{
-    background-color: #2e2f2f;
-    line-height: 1.5em;
-    padding: 35px;
-    grid-column: 6/10;
-    grid-row: 6/7;
-    box-shadow: 5px 5px 10px #6f7364;
-}
 #hero{
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     margin-top: -100px;
 }
 #hero-img{
-    padding-left: 304px;
+    width: 100%;
 }
 #hero-box{
     grid-column: 1/4;
@@ -144,11 +150,36 @@ body{
 #hero-msg h1, #hero-msg h4{
     text-align: center;
 }
+.msg{
+    background-color: #2e2f2f;
+    line-height: 1.5em;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.us{
+    background-color: #2e2f2f;
+    line-height: 1.5em;
+    padding: 35px;
+    grid-column: 1/6;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364; 
+}
 .msg h2{
     color:#CAE7B9;
     font-family: "Alfa Slab One", Helvetica, sans-serif;
 }
+.us h2{
+    color:#CAE7B9;
+    font-family: "Alfa Slab One", Helvetica, sans-serif;
+}
 .msg p{
+    color:#CAE7B9;
+    font-size: .8em;
+    padding-bottom: 15px;
+}
+.us p{
     color:#CAE7B9;
     font-size: .8em;
     padding-bottom: 15px;
